tests/validate/multiple_package_formats.txt
Error: config::conflicting_packages (https://knope-dev.github.io/knope/config/packages.html)

  × You cannot define both `packages` and `package`
   ╭─[1:1]
 1 │ [package]
   · ────┬────
   ·     ╰── `package` defined here
 2 │ 
 3 │ [packages.knope]
   · ────────┬───────
   ·         ╰── `packages` defined here
 4 │ 
   ╰────
  help: Add the `package` as a key under `packages` instead.

